# error_solver

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Pipfile  README.ipynb  README.md  Untitled.ipynb  example.ipynb  examples.ipynb  requirements.txt  setup.cfg  setup.py
docs/: Makefile  README.md  conf.py  data.rst  error_solver.rst  funcs.rst  index.md  index.rst  make.bat  solvers.rst
error_solver/: __init__.py  _base_error_solver.py  _make_modules.py  error_solver.py  error_solver_py.py  error_solver_py_test.py  error_solver_test.py  funcs.py  solver.py  solver_test.py  test_error_solver.py
error_solver/data/: __init__.py  _cylinder.py  _wire_load.py  area.ef  cylinder.ef  cylinder_error.py  data.py  loader.py  paths.py  volume.ef  wire_load.ef
error_solver/error_solver/: __init__.py  error_solver.py  error_solver_py.py  error_solver_test.py
error_solver/solvers/: __init__.py  _base_error_solver.py  collector.py  collector_test.py  error_solver.py  error_solver_py.py  error_solver_py_test.py  error_solver_test.py  pipeline.py  pipeline_test.py
error_solver/tests/: test_error_solver.py  test_solver.py
examples/: collector_ex1.py  collector_ex2.py  error_solver_ex1.py  error_solver_py_ex1.py  error_solver_py_ex2.py  pipeline_ex1.py
