[bdist_wheel]
universal = 1

[metadata]
project = Error Solver
name = error_solver
version = 0.0.0
author = Matt Pewsey
copyright = 2018, Matt Pewsey
description = Estimates error tolerances for systems of equations based on the total derivatives.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/line-mind/error_solver
keywords =
  error-estimation
  measurement-tolerances
  error-tolerances
classifiers =
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
install_requires =
  numpy>=1.14.5
  sympy>=1.1.1
python_requires = >=3.5

[options.extras_require]
test =
  pytest>=3.5.1
  pytest-cov>=2.5.1
  codecov>=2.0.15
docs =
  jinja2>=2.10
  recommonmark>=0.4.0
  docutils==0.14
  numpydoc>=0.8.0
