[bdist_wheel]
universal = 1

[metadata]
project = Error Solver
name = error_solver
version = 2.1.0
author = Matt Pewsey
copyright = 2018-2019, Matt Pewsey
description = Estimates propagation error tolerances for systems of equations.
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_file = LICENSE
url = https://github.com/mpewsey/error_solver
keywords =
  error-estimation
  measurement-tolerances
  error-tolerances
classifiers =
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Operating System :: OS Independent
  License :: OSI Approved :: BSD License

[options]
packages = find:
include_package_data = True
install_requires =
  numpy>=1.14.5
  pandas>=0.23.0
python_requires = >=3.5

[options.extras_require]
test =
  pytest>=3.5.1
  pytest-cov>=2.5.1
  codecov>=2.0.15
  sympy>=1.1.1
docs =
  docutils==0.14
  numpydoc>=0.8.0
all =
  sympy>=1.1.1
